Tela de fornecedor e usuário

--- a/css/adicionar_usuarios.css
+++ b/css/adicionar_usuarios.css
@@ -5,6 +5,8 @@ body {
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
+    background: linear-gradient(135deg, #f8f9fa, #5fabf7);
+    font-family: 'Poppins', sans-serif;
 }
 
 
@@ -35,10 +37,14 @@ input[type="text"] {
     transition: border-color 0.3s, box-shadow 0.3s;
 }
 
-input[type="text"]:focus {
-    border-color: #007bff; /* Borda azul ao focar */
-    box-shadow: 0 0 5px rgba(0, 123, 255, 0.25);
-    outline: none; /* Remove a borda padrão do navegador */
+input {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 15px;
+    border: 1px solid #ced4da;
+    border-radius: 6px;
+    box-sizing: border-box;
+    transition: border-color 0.3s, box-shadow 0.3s;
 }
 
 /* Botão Cadastrar */
@@ -56,9 +62,18 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-    background-color: #218838; /* Verde mais escuro no hover */
+    background-color: #218838; /*verde um pouco mais fote que da um efeito quando passa o mouse no botão*/
 }
 
 button[type="submit"]:active {
     transform: translateY(1px); /* Efeito de clique */
+} 
+
+.form-card {
+  background-color: #fff;
+  border-radius: 16px;
+  padding: 40px;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.1);
+  max-width: 400px;
+  margin: 50px auto;
 }
