--- a/css/adicionar_fornecedores.css
+++ b/css/adicionar_fornecedores.css
@@ -1,10 +1,12 @@
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f8f9fa; /* Fundo cinza claro */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex; 
+    flex-direction: column; 
+    align-items: center; 
+    justify-content: center; 
+    min-height: 100vh; 
+    margin: 0; 
+    background: linear-gradient(135deg, #f8f9fa, #5fabf7);
 }
 
 
